--- a/package.json
+++ b/package.json
@@ -27,22 +27,21 @@
     "koa": "^2.5.3",
     "koa-router": "^7.4.0",
     "vue": "^2.5.17",
-    "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^7.0.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@vue/cli-plugin-babel": "^3.0.4",
-    "@vue/cli-plugin-typescript": "^3.0.4",
+    "@vue/cli-plugin-eslint": "^3.0.4",
     "@vue/cli-service": "^3.0.4",
+    "@vue/eslint-config-prettier": "^3.0.5",
     "node-sass": "^4.9.0",
     "nodemon": "^1.18.4",
     "npm-run-all": "^4.1.3",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.0.1",
-    "typescript": "^3.0.0",
     "vue-template-compiler": "^2.5.17"
   }
 }
