--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "url": "https://github.com/pujiaxun/money-pro-chart/issues"
   },
   "dependencies": {
+    "@koa/cors": "^2.2.2",
+    "axios": "^0.18.0",
     "koa": "^2.5.3",
     "koa-router": "^7.4.0",
     "vue": "^2.5.17",
