--- a/package.json
+++ b/package.json
@@ -26,24 +26,26 @@
   "dependencies": {
     "@koa/cors": "^2.2.2",
     "axios": "^0.18.0",
-    "koa": "^2.5.3",
+    "csvtojson": "^2.0.8",
+    "koa": "^2.6.2",
     "koa-router": "^7.4.0",
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.1",
+    "nedb-promise": "^2.0.1",
+    "vue": "^2.5.21",
+    "vue-router": "^3.0.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@vue/cli-plugin-babel": "^3.0.4",
-    "@vue/cli-plugin-eslint": "^3.0.4",
-    "@vue/cli-service": "^3.0.4",
+    "@babel/core": "^7.2.2",
+    "@vue/cli-plugin-babel": "^3.2.0",
+    "@vue/cli-plugin-eslint": "^3.2.1",
+    "@vue/cli-service": "^3.2.0",
     "@vue/eslint-config-prettier": "^3.0.5",
-    "node-sass": "^4.9.0",
-    "nodemon": "^1.18.4",
-    "npm-run-all": "^4.1.3",
+    "node-sass": "^4.11.0",
+    "nodemon": "^1.18.9",
+    "npm-run-all": "^4.1.5",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.21"
   }
 }
