--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "csvtojson": "^2.0.8",
     "koa": "^2.6.2",
     "koa-router": "^7.4.0",
+    "lodash": "^4.17.11",
     "nedb-promise": "^2.0.1",
     "vue": "^2.5.21",
     "vue-router": "^3.0.2",
