--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@koa/cors": "^2.2.2",
     "axios": "^0.18.0",
     "csvtojson": "^2.0.8",
+    "echarts": "^4.2.0-rc.2",
     "koa": "^2.6.2",
     "koa-router": "^7.4.0",
     "lodash": "^4.17.11",
     "nedb-promise": "^2.0.1",
+    "v-charts": "^1.19.0",
     "vue": "^2.5.21",
     "vue-router": "^3.0.2",
     "vuex": "^3.0.1"
