--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@koa/cors": "^2.2.2",
     "axios": "^0.18.0",
     "csvtojson": "^2.0.8",
+    "date-fns": "^1.30.1",
     "echarts": "^4.2.0-rc.2",
     "koa": "^2.6.2",
     "koa-router": "^7.4.0",
