--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "csvtojson": "^2.0.8",
     "date-fns": "^1.30.1",
     "echarts": "^4.2.0-rc.2",
+    "element-ui": "^2.4.11",
     "koa": "^2.6.2",
     "koa-router": "^7.4.0",
     "lodash": "^4.17.11",
